c4prj2_input/grade.txt
Grading at Thu Sep 20 21:23:08 UTC 2018
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:23:7: error: request for member ‘decks’ in something not a structure or union
     fc.decks->cards = NULL;
       ^
future.c:24:7: error: request for member ‘decks’ in something not a structure or union
     fc.decks->n_cards = 0;
       ^
future.c:25:7: error: request for member ‘n_decks’ in something not a structure or union
     fc.n_decks = 1;
       ^
Compilation of future.c failed

Overall Grade: F
